feat(api): add bot name and id into bot information response
